[hjs] 알림 내역 변경에 따른 수정
