# swagger/notice.yaml
@@ -61,12 +61,10 @@ paths:
             schema:
               required:
                 - notice_all
-                - notice_newfollower
-                - notice_favorite_protect_request
                 - notice_pet_vaccination
+                - notice_follow
                 - notice_my_post
-                - notice_comment_on_my_post
-                - notice_tag_follower
+                - notice_tag
                 - notice_my_applicant
                 - notice_alarm
               type: object
@@ -74,24 +72,18 @@ paths:
                 notice_all:
                   type: boolean
                   description: 전체 알림
-                notice_newfollower:
-                  type: boolean
-                  description: 팔로워 새 게시글 알림
-                notice_favorite_protect_request:
-                  type: boolean
-                  description: 즐겨찾은 보호요청 상태 변경 알림
                 notice_pet_vaccination:
                   type: boolean
                   description: 반려동물의 접종 예정일 알림
+                notice_follow:
+                  type: boolean
+                  description: 나를 팔로우시 알림 (팔로워 입장에서 알림 받음)
                 notice_my_post:
                   type: boolean
-                  description: 내 게시글 알림
-                notice_comment_on_my_post:
+                  description: 내 게시글 알림(좋아요, 댓글)
+                notice_tag:
                   type: boolean
-                  description: 내 게시글에 달린 댓글 알림
-                notice_tag_follower:
-                  type: boolean
-                  description: 나를 태그하거나 팔로우시 알림
+                  description: 나를 태그시 알림
                 notice_my_applicant:
                   type: boolean
                   description: 내 신청서 상태 변경시 알림
